# RAGapp

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: install-ci.yml
sayvai_rag/: __init__.py  tool.py
src/sayvai_rag/: __init__.py  agent.py  tool.py
tests/: test_agent.py  test_import.py  test_tool.py
